[gd_scene load_steps=6 format=3 uid="uid://cdoksexcakmop"]

[ext_resource type="PackedScene" uid="uid://y5a4e3ajuy2r" path="res://scenes/StonePlatform.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://datfp8kxjrjg" path="res://scenes/BlueShip.tscn" id="2"]
[ext_resource type="Script" path="res://scenes/PlatformBlue.gd" id="3"]
[ext_resource type="Script" path="res://scenes/ObjectiveArea.gd" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(138.75, 79)

[node name="MainLevel" type="Node"]

[node name="PlatformBlue" type="Node2D" parent="."]
position = Vector2(35, 565)
script = ExtResource("3")

[node name="StonePlatform" parent="PlatformBlue" instance=ExtResource("1")]

[node name="StonePlatform2" parent="PlatformBlue" instance=ExtResource("1")]
position = Vector2(70, 0)

[node name="BlueShip" parent="." instance=ExtResource("2")]
position = Vector2(72.7009, 421.901)
lock_rotation = true

[node name="ObjectiveArea" type="Area2D" parent="."]
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2(70.625, 40)
shape = SubResource("1")

[node name="WinScreen" type="CanvasLayer" parent="."]
visible = false
offset = Vector2(1.755, 0)
transform = Transform2D(1, 0, 0, 1, 1.755, 0)

[node name="ColorRect" type="ColorRect" parent="WinScreen"]
offset_left = 311.245
offset_top = 172.0
offset_right = 892.245
offset_bottom = 467.0
color = Color(0.477416, 1, 0.711389, 1)

[node name="Label" type="Label" parent="WinScreen"]
offset_left = 446.245
offset_top = 266.0
offset_right = 776.245
offset_bottom = 373.0
theme_override_font_sizes/font_size = 78
text = "You Win!"

[node name="Timer" type="Timer" parent="WinScreen"]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
